feat(theme): add global theme effects
